include/sweeteditor/c_api.h

/// Replace text in the specified range (atomic operation for precise replacements such as textEdit)
/// @param start_line start line of replacement range(0-based)
/// @param start_column Start column of replacement range (0-based)
/// @param end_line end line of replacement range(0-based)
/// @param end_column End column of replacement range (0-based)
/// @param text Replacement UTF8 text
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_replace_text(intptr_t editor_handle,
    size_t start_line, size_t start_column,
    size_t end_line, size_t end_column,
    const char* text, size_t* out_size);
/// Delete text in the specified range
/// @param start_line start line of deletion range(0-based)
/// @param start_column Start column of deletion range (0-based)
/// @param end_line end line of deletion range(0-based)
/// @param end_column End column of deletion range (0-based)
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_delete_text(intptr_t editor_handle,
    size_t start_line, size_t start_column,
    size_t end_line, size_t end_column, size_t* out_size);
/// Delete one character before cursor (Backspace behavior); delete selection if present
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_backspace(intptr_t editor_handle, size_t* out_size);
/// Delete one character after cursor (Delete behavior); delete selection if present
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_delete_forward(intptr_t editor_handle, size_t* out_size);
/// Move current line (or lines covered by selection) up by one line
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_move_line_up(intptr_t editor_handle, size_t* out_size);
/// Move current line (or lines covered by selection) down by one line
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_move_line_down(intptr_t editor_handle, size_t* out_size);
/// Copy current line (or lines covered by selection) upward
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_copy_line_up(intptr_t editor_handle, size_t* out_size);
/// Copy current line (or lines covered by selection) downward
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_copy_line_down(intptr_t editor_handle, size_t* out_size);
/// Delete current line (or all lines covered by selection)
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_delete_line(intptr_t editor_handle, size_t* out_size);
/// Insert empty line above current line
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_insert_line_above(intptr_t editor_handle, size_t* out_size);
/// Insert empty line below current line
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_insert_line_below(intptr_t editor_handle, size_t* out_size);
/// Undo last edit operation
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_undo(intptr_t editor_handle, size_t* out_size);
/// Redo last undone operation
/// @return EditorActionResult binary payload, returns NULL on failure
EDITOR_API const uint8_t* editor_redo(intptr_t editor_handle, size_t* out_size);
/// Whether undo is available
/// @return 1=yes, 0=no
EDITOR_API int editor_can_undo(intptr_t editor_handle);
/// Whether redo is available
/// @return 1=yes, 0=no
EDITOR_API int editor_can_redo(intptr_t editor_handle);
/// Set cursor position
/// @param line Line number(0-based)
/// @param column Column number (0-based)
EDITOR_API const uint8_t* editor_set_cursor_position(intptr_t editor_handle, size_t line, size_t column, size_t* out_size);
/// Get cursor position
/// @param out_line Output: line number
/// @param out_column Output: column number
EDITOR_API void editor_get_cursor_position(intptr_t editor_handle, size_t* out_line, size_t* out_column);
/// Select all
EDITOR_API const uint8_t* editor_select_all(intptr_t editor_handle, size_t* out_size);
/// Set selection range
/// @param start_line selection start line(0-based)
/// @param start_column selection start column (0-based)
/// @param end_line selection end line(0-based)
/// @param end_column selection end column (0-based)
EDITOR_API const uint8_t* editor_set_selection(intptr_t editor_handle, size_t start_line, size_t start_column, size_t end_line, size_t end_column, size_t* out_size);
/// Get current selection range (two cursor positions)
/// @param out_start_line Output: selection start line
/// @param out_start_column Output: selection start column
/// @param out_end_line Output: selection end line
/// @param out_end_column Output: selection end column
/// @return 1=has selection, 0=no selection
EDITOR_API int editor_get_selection(intptr_t editor_handle, size_t* out_start_line, size_t* out_start_column, size_t* out_end_line, size_t* out_end_column);
/// Get selected text
/// @return Selected text (UTF8)
EDITOR_API const char* editor_get_selected_text(intptr_t editor_handle);
/// Get text range of word at cursor (scan continuous word chars to the left)
/// @param out_start_line Output: start line
/// @param out_start_column Output: start column
/// @param out_end_line Output: end line
/// @param out_end_column Output: end column
EDITOR_API void editor_get_word_range_at_cursor(intptr_t editor_handle, size_t* out_start_line, size_t* out_start_column, size_t* out_end_line, size_t* out_end_column);
/// Get text content of word at cursor
/// @return Word text (UTF8); returns empty string when cursor is not on a word
EDITOR_API const char* editor_get_word_at_cursor(intptr_t editor_handle);
/// Move cursor left
/// @param extend_selection Whether to extend selection (Shift behavior)
EDITOR_API const uint8_t* editor_move_cursor_left(intptr_t editor_handle, int extend_selection, size_t* out_size);
/// Move cursor right
/// @param extend_selection Whether to extend selection
EDITOR_API const uint8_t* editor_move_cursor_right(intptr_t editor_handle, int extend_selection, size_t* out_size);
/// Move cursor up
/// @param extend_selection Whether to extend selection
EDITOR_API const uint8_t* editor_move_cursor_up(intptr_t editor_handle, int extend_selection, size_t* out_size);
/// Move cursor down
/// @param extend_selection Whether to extend selection
EDITOR_API const uint8_t* editor_move_cursor_down(intptr_t editor_handle, int extend_selection, size_t* out_size);
/// Move cursor to line start
/// @param extend_selection Whether to extend selection
EDITOR_API const uint8_t* editor_move_cursor_to_line_start(intptr_t editor_handle, int extend_selection, size_t* out_size);
/// Move cursor to line end
/// @param extend_selection Whether to extend selection
EDITOR_API const uint8_t* editor_move_cursor_to_line_end(intptr_t editor_handle, int extend_selection, size_t* out_size);
/// Set read-only mode
/// @param read_only 1=read-only, 0=editable
EDITOR_API const uint8_t* editor_set_read_only(intptr_t editor_handle, int read_only, size_t* out_size);